# Lumi

./: .gitignore  COMMIT_MSG.txt  Cargo.toml  README.md
crates/lumas-character/: Cargo.toml
crates/lumas-character/src/: accessory.rs  appearance.rs  behavior.rs  character.rs  config.rs  customization.rs  diagnostics.rs  emotion.rs  error.rs  event.rs  expression.rs  identity.rs  interaction.rs  lib.rs  lifecycle.rs  manager.rs  metrics.rs  movement.rs  navigation.rs  observer.rs  persistence.rs  position.rs  scheduler.rs
crates/lumas-character/tests/: appearance.rs  behavior_selection.rs  behavior_state_scoping.rs  concurrency.rs  emotion.rs  expression.rs  interaction.rs  lifecycle.rs  metrics.rs  movement_intent.rs  no_duplicate_state.rs  persistence.rs  scheduler.rs  state_machine_integration.rs
crates/lumas-config/: Cargo.toml
crates/lumas-config/src/: cache.rs  env.rs  error.rs  events.rs  lib.rs  loader.rs  manager.rs  migration.rs  override_.rs  platform.rs  resolver.rs  secret.rs  validator.rs  watcher.rs
crates/lumas-config/src/schema/: ai.rs  animation.rs  character.rs  diagnostics.rs  general.rs  memory.rs  mod.rs  plugin.rs  security.rs  workspace.rs
crates/lumas-desktop/: Cargo.toml
crates/lumas-desktop/src/: command.rs  config.rs  diagnostics.rs  dpi.rs  drag_drop.rs  error.rs  events.rs  geometry.rs  hit_test.rs  input.rs  lib.rs  manager.rs  metrics.rs  monitor.rs  observer.rs  overlay.rs  render.rs  window.rs  workspace.rs  zorder.rs
crates/lumas-desktop/src/platform/: linux_wayland.rs  linux_x11.rs  macos.rs  mod.rs  windows.rs
crates/lumas-desktop/tests/: command_channel.rs  geometry.rs  hit_test.rs  monitor.rs
crates/lumas-ipc/fuzz/: Cargo.toml
crates/lumas-process/: Cargo.toml
crates/lumas-process/src/: capability.rs  config.rs  dependency.rs  descriptor.rs  diagnostics.rs  error.rs  event.rs  handle.rs  heartbeat.rs  id.rs  launcher.rs  lib.rs  lifecycle.rs  manager.rs  metrics.rs  monitor.rs  registry.rs  resource.rs  restart.rs  supervisor.rs  worker.rs
crates/lumas-process/tests/: capability.rs  concurrent.rs  dependency.rs  diagnostics.rs  lifecycle.rs  restart.rs
crates/lumas-render/: Cargo.toml
crates/lumas-render/shaders/: bloom.wgsl  character.wgsl  fur.wgsl  particle_render.wgsl  particle_update.wgsl  postprocess.wgsl  shadow.wgsl  ui.wgsl
crates/lumas-render/src/: assets.rs  camera.rs  compositor.rs  config.rs  context.rs  diagnostics.rs  error.rs  frame.rs  graph.rs  lib.rs  lighting.rs  material.rs  mesh.rs  metrics.rs  overlay.rs  renderer.rs  resource.rs  scene.rs  shader.rs  texture.rs  viewport.rs
crates/lumas-render/tests/: alpha_premult.rs  context.rs  device_lost.rs  frame_budget.rs  fur_lod.rs  graph.rs  lod.rs  material.rs  mesh.rs  particle.rs  shader.rs  texture.rs
crates/lumas-runtime/: Cargo.toml
crates/lumas-runtime/src/: bootstrap.rs  config.rs  context.rs  error.rs  event.rs  lib.rs  lifecycle.rs  resource.rs  service.rs  shutdown.rs  version.rs
crates/lumi-error/: Cargo.toml
crates/lumi-error/benches/: error_perf.rs
crates/lumi-error/src/: category.rs  config.rs  context.rs  crash.rs  diagnostics.rs  error.rs  error_code.rs  event.rs  formatter.rs  integration.rs  lib.rs  metrics.rs  panic.rs  recovery.rs  report.rs  retry.rs  severity.rs  stacktrace.rs  testing.rs
crates/lumi-error/tests/: code_registry.rs  concurrency.rs  crash.rs  diagnostics.rs  metrics.rs  propagation.rs  recovery.rs  retry.rs  security.rs  serialization.rs
crates/lumi-ipc/: Cargo.toml  build.rs
crates/lumi-ipc/benches/: wire_checksum.rs  wire_encode_decode.rs
crates/lumi-ipc/fuzz/: Cargo.toml
crates/lumi-ipc/src/: auth.rs  bus.rs  codec.rs  config.rs  connection.rs  diagnostics.rs  error.rs  event.rs  guard.rs  lib.rs  manager.rs  message.rs  metrics.rs  permission.rs  protocol.rs  registry.rs  serializer.rs  transport.rs  validator.rs  wire.rs
crates/lumi-logging/: Cargo.toml
crates/lumi-logging/src/: config.rs  context.rs  diagnostics.rs  error.rs  event.rs  filter.rs  layer.rs  lib.rs  manager.rs  metrics.rs  pipeline.rs  redaction.rs
crates/lumi-performance/: Cargo.toml
crates/lumi-performance/src/: collector.rs  config.rs  dashboard.rs  diagnostics.rs  export.rs  gauge.rs  histogram.rs  integration.rs  lib.rs  manager.rs  metric.rs  profiler.rs  resource.rs  sampler.rs  system.rs  testing.rs  threshold.rs  timer.rs
crates/lumi-state/: Cargo.toml
crates/lumi-state/src/: config.rs  context.rs  error.rs  event.rs  guard.rs  hierarchy.rs  lib.rs  lifecycle.rs  machine.rs  manager.rs  observer.rs  scheduler.rs  state.rs  testing.rs
lumas-core/: Cargo.toml
lumas-core/src/: ai_core.rs  audio.rs  conversation.rs  desktop_awareness.rs  emotion.rs  input_system.rs  logging.rs  main.rs  memory.rs  performance.rs  planning.rs  privacy.rs  security.rs  state_machine.rs  tool_framework.rs  update.rs
lumas-ipc/: Cargo.toml
lumas-ipc/src/: lib.rs  peer.rs  transport.rs  wire.rs
lumas-render/: Cargo.toml
lumas-render/src/: animation_engine.rs  character_engine.rs  desktop_engine.rs  main.rs  rendering_engine.rs  workspace_system.rs
lumas-sdk/: Cargo.toml
lumas-sdk/src/: lib.rs  plugin.rs  prelude.rs  tool.rs
lumas-storage/: Cargo.toml
lumas-storage/src/: asset_cache.rs  config_store.rs  main.rs  memory_store.rs
lumi-core/: Cargo.toml
lumi-core/src/: ai_core.rs  audio.rs  conversation.rs  desktop_awareness.rs  emotion.rs  input_system.rs  logging.rs  main.rs  memory.rs  performance.rs  planning.rs  privacy.rs  security.rs  state_machine.rs  tool_framework.rs  update.rs
lumi-ipc/: Cargo.toml
lumi-ipc/src/: lib.rs  peer.rs  transport.rs  wire.rs
lumi-plugin-host/: Cargo.toml
lumi-plugin-host/src/: capability_broker.rs  main.rs  plugin_registry.rs  plugin_sandbox.rs
lumi-sdk/: Cargo.toml
lumi-sdk/src/: lib.rs  plugin.rs  prelude.rs  tool.rs
lumi-storage/: Cargo.toml
lumi-storage/src/: asset_cache.rs  config_store.rs  main.rs  memory_store.rs
lumi-voice/: Cargo.toml
lumi-voice/src/: main.rs  ssml_processor.rs  stt_engine.rs  tts_engine.rs  wake_word.rs
(+293 files in other folders)
