[workspace]
resolver = "2"
members = [
    "lumi-common",
    "lumi-ipc",
    "lumi-core",
    "lumi-render",
    "lumi-voice",
    "lumi-storage",
    "lumi-plugin-host",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT"
repository = "https://github.com/lumi-platform/lumi"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rmp-serde = "1"
tokio = { version = "1", features = ["full"] }
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1"
parking_lot = "0.12"
rand = "0.8"
dashmap = "6"
