[package]
name = "lumas-ipc"
version.workspace = true
edition.workspace = true

[dependencies]
lumas-common = { path = "../lumas-common" }
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
rmp-serde = "1"
anyhow.workspace = true
tracing.workspace = true
uuid.workspace = true
dashmap.workspace = true

[target.'cfg(unix)'.dependencies]
tokio = { workspace = true, features = ["net", "io-util", "sync", "time", "rt"] }

[target.'cfg(windows)'.dependencies]
tokio = { workspace = true, features = ["net", "io-util", "sync", "time", "rt"] }

[features]
tcp-fallback = []
