[package]
name = "lumas-render"
version.workspace = true
edition.workspace = true

[dependencies]
lumas-common = { path = "../lumas-common" }
lumas-ipc = { path = "../lumas-ipc" }
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
chrono.workspace = true
