[package]
name = "lumi-core"
version.workspace = true
edition.workspace = true

[dependencies]
lumi-common = { path = "../lumi-common" }
lumi-ipc = { path = "../lumi-ipc" }
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
uuid.workspace = true
chrono.workspace = true
parking_lot.workspace = true
dashmap.workspace = true
rand.workspace = true
