[package]
name = "lumi-ipc"
version.workspace = true
edition.workspace = true

[dependencies]
lumi-common = { path = "../lumi-common" }
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
rmp-serde = "1"
anyhow.workspace = true
tracing.workspace = true
uuid.workspace = true
dashmap.workspace = true
