[package]
name = "lumi-sdk"
version = "0.1.0"
edition = "2021"
description = "Lumi Developer SDK - Build plugins, tools, and extensions for the Lumi platform"

[dependencies]
lumi-common = { path = "../lumi-common" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
