[package]
name = "lumi-storage"
version.workspace = true
edition.workspace = true

[dependencies]
lumi-common = { path = "../lumi-common" }
lumi-ipc = { path = "../lumi-ipc" }
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
parking_lot.workspace = true
chrono.workspace = true
uuid.workspace = true
