[package]
name = "lumi-voice"
version.workspace = true
edition.workspace = true

[dependencies]
lumi-common = { path = "../lumi-common" }
lumi-ipc = { path = "../lumi-ipc" }
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
chrono.workspace = true
