[package]
name = "lumas-character"
version.workspace = true
edition.workspace = true
description = "Character behavior, identity, emotion, and desktop interaction engine for Lumas"

[dependencies]
# Workspace internal
lumas-common = { path = "../../lumas-common" }
lumas-state = { path = "../lumas-state" }
lumas-error = { path = "../lumas-error" }
lumas-performance = { path = "../lumas-performance" }

# Async
tokio = { version = "1", features = ["full"] }
tokio-util = "0.7"
async-trait = "0.1"
futures = "0.3"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Error handling
thiserror = "2"
anyhow.workspace = true

# Concurrency
parking_lot.workspace = true
dashmap.workspace = true

# Utilities
uuid.workspace = true
chrono.workspace = true
tracing.workspace = true
rand.workspace = true
indexmap = { version = "2", features = ["serde"] }
once_cell = "1"
semver = { version = "1", features = ["serde"] }

[dev-dependencies]
tokio-test = "0.4"
proptest = "1"
tempfile = "3"
