[package]
name = "lumas-config"
version = "0.1.0"
edition = "2021"
description = "Lumas platform configuration system - single source of truth for all configurable aspects of every subsystem"

[dependencies]
# Serialization
serde        = { version = "1", features = ["derive"] }
serde_json   = "1"
toml         = "0.8"

# Async
tokio        = { version = "1", features = ["full"] }
async-trait  = "0.1"

# Error handling
thiserror    = "1"
anyhow       = "1"

# Concurrency
arc-swap     = "1"          # Lock-free config reads via ArcSwap<LumasConfig>
parking_lot  = "0.12"

# File watching
notify       = { version = "6", features = [] }  # OS-native file system events

# Validation
url          = "2"          # URL parsing and validation
semver       = "1"          # Version compatibility checks

# Crypto (for config file integrity)
sha2         = "0.10"       # TOML file hash for change detection

# Utilities
once_cell    = "1"
chrono       = { version = "0.4", features = ["serde"] }
tracing      = "0.1"
dirs         = "5"          # Platform-appropriate config paths
dashmap      = "5"          # Concurrent hashmap for overrides
uuid         = { version = "1", features = ["v4"] }

[dev-dependencies]
tokio-test   = "0.4"
tempfile     = "3"
proptest     = "1"
criterion    = "0.5"
