[package]
name = "lumas-desktop"
version = "0.1.0"
edition = "2021"
description = "Desktop Engine - OS window management, input, and compositor abstraction for Lumas"

[dependencies]
# Workspace internal
lumas-runtime = { path = "../lumas-runtime" }
lumas-logging = { path = "../lumas-logging" }
lumas-config = { path = "../lumas-config" }
lumas-process = { path = "../lumas-process" }
lumas-render = { path = "../lumas-render" }

# Window management
winit = { version = "0.29", features = ["rwh_06"] }
raw-window-handle = "0.6"

# Async
tokio = { version = "1", features = ["full"] }
async-trait = "0.1"

# Error handling
thiserror = "1"

# Concurrency
parking_lot = "0.12"
dashmap = "5"
arc-swap = "1"
crossbeam-channel = "0.5"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Utilities
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
tracing = "0.1"
once_cell = "1"

# Shared memory for alpha mask IPC (render process → desktop engine)
# memmap2 provides cross-platform file-backed and anonymous memory mapping
# for the double-buffered alpha mask. Preferred over shared_memory crate
# because it's more actively maintained and has a simpler API.
memmap2 = "0.9"

# Platform-specific
[target.'cfg(target_os = "macos")'.dependencies]
objc2 = "0.5"
objc2-app-kit = "0.2"
objc2-foundation = "0.2"
core-foundation = "0.9"
core-graphics = "0.23"

[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.52", features = [
    "Win32_UI_WindowsAndMessaging",
    "Win32_UI_Accessibility",
    "Win32_Graphics_Gdi",
    "Win32_Foundation",
    "Win32_System_Threading",
]}

[target.'cfg(all(unix, not(target_os = "macos")))'.dependencies]
x11rb = { version = "0.13", features = ["all-extensions"], optional = true }
wayland-client = { version = "0.31", optional = true }
wayland-protocols = { version = "0.31", optional = true }
wayland-protocols-wlr = { version = "0.2", optional = true }

[features]
x11 = ["dep:x11rb"]
wayland = ["dep:wayland-client", "dep:wayland-protocols", "dep:wayland-protocols-wlr"]
default = ["x11", "wayland"]

[dev-dependencies]
tokio-test = "0.4"
criterion = { version = "0.5", features = ["async"] }
proptest = "1"
