[package]
name = "lumas-process"
version.workspace = true
edition.workspace = true
description = "Production-grade process management system for the Lumas platform — OTP-inspired supervision tree, dependency-graph lifecycle, and cross-platform process orchestration."
repository.workspace = true
license.workspace = true

[dependencies]
# Workspace internal
lumas-runtime = { path = "../lumas-runtime" }
lumas-common = { path = "../../lumas-common" }

# Async runtime
tokio = { version = "1", features = ["full"] }
tokio-util = "0.7"
async-trait = "0.1"

# Error handling
thiserror = "2"
anyhow.workspace = true

# Concurrency
dashmap.workspace = true
parking_lot.workspace = true
crossbeam-channel = "0.5"

# Serialization
serde.workspace = true
serde_json.workspace = true

# Utilities
uuid.workspace = true
chrono.workspace = true
semver = { version = "1", features = ["serde"] }
once_cell = "1"
tracing.workspace = true
rand.workspace = true
petgraph = "0.6"

# Platform-specific
[target.'cfg(unix)'.dependencies]
nix = { version = "0.27", features = ["signal", "process", "resource"] }

[target.'cfg(windows)'.dependencies]
windows = { version = "0.52", features = [
    "Win32_System_Threading",
    "Win32_Foundation",
    "Win32_System_JobObjects",
    "Win32_Security",
] }

[dev-dependencies]
tokio-test = "0.4"
tempfile = "3"
futures = "0.3"
