[package]
name = "lumas-render"
version = "0.1.0"
edition = "2021"
description = "GPU rendering engine for the Lumas desktop AI companion"

[package.metadata.docs.rs]
features = ["shader-validation", "timestamp-queries"]

[dependencies]
# Workspace internal
lumas-runtime = { path = "../lumas-runtime" }
lumas-logging = { path = "../lumas-logging" }
lumas-config = { path = "../lumas-config" }
lumas-process = { path = "../lumas-process" }
lumas-ipc = { path = "../../lumas-ipc" }
lumas-common = { path = "../../lumas-common" }

# GPU abstraction — wgpu provides Vulkan/Metal/DX12/GL backend abstraction.
# v0.23 series for async device creation and surface API.
# NOTE: wgpu 0.23+ requires valid RawWindowHandle for surface creation;
# lumas-desktop provides this through its PlatformBackend.
wgpu = "29.0"

# Raw window handle — used in Renderer::new() public API for surface creation.
# Pinned explicitly to match wgpu 0.23's transitive dependency on rwh 0.6.
raw-window-handle = "0.6"

# Async
tokio = { version = "1", features = ["full"] }
async-trait = "0.1"
futures = "0.3"
pollster = "0.4"

# Error handling
thiserror = "1"
anyhow = "1"

# Concurrency
parking_lot = "0.12"
dashmap = "5"
arc-swap = "1"
crossbeam-channel = "0.5"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Utilities
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
tracing = "0.1"
once_cell = "1"
bitflags = "2"

# Asset loading
image = "0.24"          # Texture loading from PNG/JPEG

# Index map for render graph passes (preserves insertion order for deterministic execution)
indexmap = "2"

# SlotMap for O(1) resource deallocation without UUID overhead
slotmap = "1"

# Math for GPU uniform layout
bytemuck = { version = "1", features = ["derive"] }
glam = "0.24"           # WGSL-compatible math types (Vec3, Mat4, etc.)

# WGSL shader validation (optional — only needed when shader-validation is enabled)
# Version matches the naga bundled with wgpu 0.23 for API compatibility.
naga = { version = "29.0", features = ["wgsl-in"], optional = true }

# Hot-reload support (optional)
notify = { version = "6", optional = true }

[features]
default = ["timestamp-queries", "shader-validation"]
# GPU timing via wgpu::Features::TIMESTAMP_QUERY
timestamp-queries = []
# Extra naga validation of WGSL shaders at startup
shader-validation = ["dep:naga"]
# Watch shaders/ directory for changes and recompile on the fly
hot-reload = ["dep:notify"]
# Enable wgpu debug labels, validation layers, and RenderDoc/PIX markers
gpu-debug = []
# Offscreen rendering for CI testing without a display
headless = []

[dev-dependencies]
tokio-test = "0.4"
criterion = { version = "0.5", features = ["async_futures"] }
proptest = "1"
tempfile = "3"
