[package]
name = "lumas-runtime"
version.workspace = true
edition.workspace = true
description = "Production-grade core runtime for the Lumas desktop AI platform."
repository.workspace = true
license.workspace = true

[dependencies]
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7" }
tokio-stream = { version = "0.1", features = ["sync"] }
async-trait = "0.1"
thiserror = "2"
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
serde.workspace = true
serde_json.workspace = true
toml = "0.8"
arc-swap = "1"
dashmap.workspace = true
parking_lot.workspace = true
crossbeam-channel = "0.5"
once_cell = "1"
uuid.workspace = true
chrono.workspace = true
semver = { version = "1", features = ["serde"] }
num_cpus = "1"
lumas-common = { path = "../../lumas-common" }
lumas-ipc = { path = "../../lumas-ipc" }
lumas-config = { path = "../lumas-config" }

[dev-dependencies]
tokio-test = "0.4"
proptest = "1"
