[package]
name = "lumi-error"
version.workspace = true
edition.workspace = true
description = "Centralized error handling, recovery, and crash reporting for the Lumi platform"

[features]
default = ["metrics", "async"]
backtrace = ["dep:backtrace"]
metrics = []
async = ["dep:tokio"]
testing = []

[dependencies]
# Workspace internal
lumi-runtime = { path = "../lumi-runtime" }
lumi-config  = { path = "../lumi-config" }

# Error handling
thiserror = "1"

# Async
tokio = { version = "1", features = ["full"], optional = true }

# Serialization (non-optional — required by all reporting/event/diagnostics)
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1" }

# Concurrency
parking_lot = "0.12"
dashmap = "5"
crossbeam-channel = "0.5"

# Backtrace capture
backtrace = { version = "0.3", optional = true }
# Stack trace capture - use nightly std for Backtrace when possible

# Utilities
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
once_cell = "1"
num_cpus = "1"
tracing = "0.1"
regex = "1"
indexmap = "2"
cfg-if = "1"
rand = "0.8"

[dev-dependencies]
tokio-test = "0.4"
tempfile = "3"
criterion = { version = "0.5", features = ["html_reports"] }
proptest = "1"

