[package]
name = "lumi-logging"
version.workspace = true
edition.workspace = true
description = "Lumi platform logging system - single authoritative sink for all diagnostic output"

[dependencies]
# Workspace internal
lumi-runtime = { path = "../lumi-runtime" }
lumi-config  = { path = "../lumi-config" }

# Tracing ecosystem
tracing                    = "0.1"
tracing-subscriber         = { version = "0.3", features = ["env-filter", "json", "registry"] }
tracing-appender           = "0.2"

# Async
tokio                      = { version = "1", features = ["full"] }
tokio-util                 = "0.7"
async-trait                = "0.1"

# Serialization
serde                      = { version = "1", features = ["derive"] }
serde_json                 = "1"

# Error handling
thiserror                  = "1"

# Concurrency
parking_lot                = "0.12"
crossbeam-channel          = "0.5"

# Compression
flate2                     = "1"

# Utilities
uuid                       = { version = "1", features = ["v4"] }
chrono                     = { version = "0.4", features = ["serde"] }
once_cell                  = "1"
regex                      = "1"
dashmap                    = "5"
atty                       = "0.2"
num_cpus                   = "1"
indexmap                   = "2"

[dev-dependencies]
tokio-test                 = "0.4"
tempfile                   = "3"
criterion                  = "0.5"
proptest                   = "1"
tracing-test               = "0.2"
