[package]
name = "lumi-performance"
version.workspace = true
edition.workspace = true
description = "Centralized performance observability for the Lumi platform"

[features]
default = ["dashboard"]
gpu = []
profiler = []
export-prometheus = ["dep:prometheus"]
export-otel = ["dep:opentelemetry", "dep:opentelemetry-otlp"]
dashboard = []

[dependencies]
# Workspace internal
lumi-runtime = { path = "../lumi-runtime" }
lumi-error   = { path = "../lumi-error" }
lumi-config  = { path = "../lumi-config" }

# HDR Histogram (lock-free concurrent recording)
hdrhistogram = "7"

# Async
tokio = { version = "1", features = ["full"] }
async-trait = "0.1"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Concurrency
parking_lot = "0.12"
dashmap = "5"
crossbeam-channel = "0.5"

# System resource sampling
# sysinfo is not available in this build environment; using BasicSampler fallback

# Time and scheduling
chrono = { version = "0.4", features = ["serde"] }

# Error handling
thiserror = "1"
tracing = "0.1"

# Export
prometheus = { version = "0.13", optional = true, features = ["process"] }
opentelemetry = { version = "0.21", optional = true }
opentelemetry-otlp = { version = "0.14", optional = true, features = ["http-proto"] }

# Profiling
# inferno = { version = "0.11", optional = true } # For flamegraph generation

# Utilities
uuid = { version = "1", features = ["v4"] }
once_cell = "1"
indexmap = "2"
regex = "1"
humantime = "2"

[dev-dependencies]
tempfile = "3"
criterion = { version = "0.5", features = ["html_reports"] }
tokio-test = "0.4"


